_sass/components/_grid.scss
.grid {
    display: grid;
}

.grid-3 {
    grid-template-columns: 4fr 4fr 4fr;

    @media (max-width: 567px) {
        grid-template-columns: 12fr;
    }
}

.content-box {
    display: grid;
    grid-template-areas: ". content .";
    grid-template-columns: 2fr 8fr 2fr;

    @media (max-width: 1199px) {
        grid-template-columns: 1fr 8fr 1fr;
    }

    .content-inner {
        grid-area: content;
        padding-top: 2.5rem;

        @media (max-width: 767px) {
            padding-top: 5rem;
        }
    }
}

body.category-science,
body.category-educator {
    .content-box {
        .content-inner {
            @media (max-width: 767px) {
                padding-top: 0;
            }
        }
    }
}

body.collective,
body.contact,
body[class*="faq"],
body[class*="science"] {
    .content-box {
        .content-inner {
            @media (min-width: 1200px) {
                padding-top: 5rem;
            }
        }
    }
}

.about,
.category-educator,
.category-science,
.collective,
.collectives,
.contact,
.faqs,
.home,
.lineup {
    .content-box {
        padding-top: 42px;
        padding-bottom: 2rem;

        .content-inner {
            h2 {
                &:not([class*="margin-top-"]) {
                    margin-top: 0;
                }
            }

            > p {
                font-size: 1.5rem;
                margin-top: 0;
                margin-bottom: 1.5rem;

                &:first-child {
                    font-size: 2rem;
                }
            }
        }
    }
}

